syntax = "proto3";
package dev.array21.invoicex;

import "entities/org.proto";

message OrgUserListResponse {
  repeated OrgUser orgUsers = 1;
}
